# Music.design.made.accessible-

./: .gitignore  CHANGELOG_v52.md  COMMANDS.md  GUI_SPEC_v0.2.md  INTERFACE_TRANSITION_SPEC.md  README.md  RELEASE_NOTES.md  ROADMAP_FULL_RELEASE.md  ROADMAP_v45.md  VERSION.md  bmdma.py  launcher.bat  mad_gui.py  mad_tui.py  mad_tui_launcher.py  mdma_gui.py  pyproject.toml  requirements.txt  run_mdma.py  test_mad_dsl.py
docs/specs/: GUI_WINDOW_ARCHITECTURE_SPEC.md  IMPLEMENTATION_PLAN.md  OBJECT_MODEL_SPEC.md
gui/: __init__.py  bridge.py  events.py  shell.py
gui/panels/: __init__.py
gui/panels/arrangement/: __init__.py  (+3 more)
gui/widgets/: __init__.py  labeled_control.py  object_selector.py  param_slider.py  step_grid.py  waveform_view.py
gui/windows/: __init__.py  arrangement_window.py  effects_window.py  generation_window.py  inspector_window.py  mixing_window.py  mutation_window.py  synthesis_window.py
mdma_rebuild/: __init__.py
mdma_rebuild/ai/: __init__.py  analysis.py  breeding.py  core.py  descriptors.py  generation.py  router.py
mdma_rebuild/commands/: __init__.py  adv_cmds.py  advanced_cmds.py  ai_cmds.py  audiorate_cmds.py  buffer_cmds.py  convolution_cmds.py  dj_cmds.py  dsl_cmds.py  fx_cmds.py  gen_cmds.py  general_cmds.py  generator_cmds.py  hq_cmds.py  math_cmds.py  midi_cmds.py  obj_cmds.py  pack_cmds.py  param_cmds.py  pattern_cmds.py  perf_cmds.py  phase_t_cmds.py  playback_cmds.py  render_cmds.py  stub_cmds.py  sydef_cmds.py  synth_cmds.py  working_cmds.py
mdma_rebuild/core/: __init__.py  banks.py  objects.py  pack.py  registry.py  session.py  song_registry.py  user_data.py
mdma_rebuild/dsp/: __init__.py  advanced_ops.py  beat_gen.py  convolution.py  dj_mode.py  effects.py  enhancement.py  envelopes.py  generators.py  granular.py  loop_gen.py  midi_input.py  monolith.py  music_theory.py  pattern.py  performance.py  playback.py  scaling.py  stems.py  streaming.py  transforms.py  visualization.py
(+31 files in other folders)
