[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdma"
version = "52.0.0"
description = "Music Design Made Accessible — a vision-optional audio production environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Cyrus"},
]
keywords = ["audio", "music", "daw", "accessible", "synthesis", "dsp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "soundfile>=0.10.0",
    "sounddevice>=0.4.0",
    "pydub>=0.25.0",
]

[project.optional-dependencies]
gui = ["wxPython>=4.2.0"]
tui = ["textual>=0.40.0"]
ai = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "diffusers>=0.20.0",
    "librosa>=0.10.0",
]
stems = [
    "demucs>=4.0.0",
    "spleeter>=2.3.0",
]
streaming = ["yt-dlp>=2023.0.0"]
all = [
    "mdma[gui]",
    "mdma[tui]",
    "mdma[ai]",
    "mdma[stems]",
    "mdma[streaming]",
]

[project.scripts]
mdma = "run_mdma:main"

[project.urls]
Homepage = "https://github.com/thevisionary6/Music.design.made.accessible-"
Repository = "https://github.com/thevisionary6/Music.design.made.accessible-"

[tool.setuptools]
py-modules = ["run_mdma", "bmdma", "mdma_gui", "mad_tui"]

[tool.setuptools.packages.find]
include = ["mdma_rebuild*"]
